--- a/index-about.html
+++ b/index-about.html
@@ -32,22 +32,16 @@
 	<!-----------------------tophead----------------------->
 	<div class="tophead1">
 		<ul class="tophead">
-			<li><a href="../forganlu.github.io/index-painting.html">绘画</a></li>
-			<li><a href="../forganlu.github.io/index-photography.html">摄影</a></li>
-			<li><a href="../forganlu.github.io/index-writing.html">文字</a></li>
-			<li><a href="../forganlu.github.io/index-about.html">关于</a></li>
-			<li><a href="../forganlu.github.io/index-contact.html">联络</a></li>
+			<li><a href="../forganlu.github.io/index-painting.html"><span style="background-color:white" >绘画/painting</span></a></li>
+			<li><a href="../forganlu.github.io/index-photography.html"><span style="background-color:rgb(255, 255, 255)" >摄影/photograph</span></a></li>
+			<li><a href="../forganlu.github.io/index-writing.html"><span style="background-color:rgb(255, 255, 255)" >文字/writing</span></a></li>
+			<li><a href="../forganlu.github.io/index-about.html"><span style="background-color:rgb(255, 0, 0)" >关于/about</span></a></li>
+			<li><a href="../forganlu.github.io/index-contact.html"><span style="background-color:white" >联络/contact</span></a></li></span>
 		</ul>
 	</div>
 	<!------------------------lefthead--------------------->
 	<div  class="lefthead1">
-		<ul class="lefthead">
-			<li><a href="../forganlu.github.io/index-painting.html">painting</a></li>
-			<li><a href="../forganlu.github.io/index-photography.html">photography</a></li>
-			<li><a href="../forganlu.github.io/index-writing.html">writing</a></li>
-			<li><a href="../forganlu.github.io/index-about.html">about</a></li>
-			<li><a href="../forganlu.github.io/index-contact.html">contact</a></li>
-		</ul>
+		
 	</div>	
 	
 		
@@ -64,6 +58,7 @@
 			<br />
 			Based in Guangzhou / Hong Kong
 			<br />
+			<br />
 			BFA - 5thStudio of Oil Painting Department of Guangzhou Academic of Fine Art
 			<br />
 			MFA - Creative Media of City University of Hong Kong
@@ -73,7 +68,7 @@
 			<br />
 			<span style="background-color:white" ><strong>Selected Exhibition</strong></span><br />
 			<br />
-			2021  <strong>Furment</strong> - Creative Media Year1 MFA show
+			2021  <strong>Furment</strong> - Creative Media Year1 MFA show<br />
 			<br />
 			2020  <strong>Painting for the Wind</strong> - The 23rd Workshop Project - OCT Boxes Art Museum<br />
 			2020  <strong>Touch on heat</strong> - The first exhibition of selected graduates of CAFA x GAFA<br />
