--- a/index-writing.html
+++ b/index-writing.html
@@ -58,35 +58,28 @@
 	<!-----------------------tophead----------------------->
 	<div class="tophead1">
 		<ul class="tophead">
-			<li><a href="../forganlu.github.io/index-painting.html">绘画</a></li>
-			<li><a href="../forganlu.github.io/index-photography.html">摄影</a></li>
-			<li><a href="../forganlu.github.io/index-writing.html">文字</a></li>
-			<li><a href="../forganlu.github.io/index-about.html">关于</a></li>
-			<li><a href="../forganlu.github.io/index-contact.html">联络</a></li>
+			<li><a href="../forganlu.github.io/index-painting.html"><span style="background-color:rgb(255, 255, 255)" >绘画/painting</span></a></li>
+			<li><a href="../forganlu.github.io/index-photography.html"><span style="background-color:rgb(255, 255, 255)" >摄影/photograph</span></a></li>
+			<li><a href="../forganlu.github.io/index-writing.html"><span style="background-color:rgb(255, 0, 0)" >文字/writing</span></a></li>
+			<li><a href="../forganlu.github.io/index-about.html"><span style="background-color:rgb(255, 255, 255)" >关于/about</span></a></li>
+			<li><a href="../forganlu.github.io/index-contact.html"><span style="background-color:rgb(255, 255, 255)" >联络/contact</span></a></li></span>
 		</ul>
 	</div>
 	<!------------------------lefthead--------------------->
 	<div  class="lefthead1">
 		<ul class="lefthead">
-			<li><a href="../forganlu.github.io/index-painting.html">painting</a></li>
-			<li><a href="../forganlu.github.io/index-photography.html">photography</a></li>
-			<li><a href="../forganlu.github.io/index-writing.html">writing</a>
-				<ul class="secondmanu" list-style:none;>
-					<li><a href="../forganlu.github.io/writing/writing-1.html">01. 2018.12.30 《马鹿》</a></li>
-					<li><a href="../forganlu.github.io/writing/writing-2.html">02. 2019.01.09 《名字》</a></li>
-					<li><a href="../forganlu.github.io/writing/writing-3.html">03. 2019.05.24 《旅馆》</a></li>
-					<li><a href="../forganlu.github.io/writing/writing-4.html">04. 2019.10.22 《马鹿之死》</a></li>
-					<li><a href="../forganlu.github.io/writing/writing-5.html">05. 2019.11.05 《美丽新世界》</a></li>
-					<li><a href="../forganlu.github.io/writing/writing-6.html">06. 2019.12.04 《记忆空间》</a></li>
-					<li><a href="../forganlu.github.io/writing/writing-7.html">07. 2020.02.14 《温暖的海》</a></li>
-					<li><a href="../forganlu.github.io/writing/writing-8.html">08. 2020.02.17 《燕子啊燕子》</a></li>
-					<li><a href="../forganlu.github.io/writing/writing-9.html">09. 2020.02.20 《末日的前好几天》</a></li>
-					<li><a href="../forganlu.github.io/writing/writing-10.html">10. 2020.05.29 《吃金鱼》</a></li>
-					<li><a href="../forganlu.github.io/writing/writing-11.html">11. 2020.10.17 《1810号房间》</a></li>
-				</ul>
-			</li>
-			<li><a href="../forganlu.github.io/index-about.html">about</a></li>
-			<li><a href="../forganlu.github.io/index-contact.html">contact</a></li>
+			<li><a href="../forganlu.github.io/writing/writing-1.html">01. 2018.12.30 《马鹿》</a></li>
+			<li><a href="../forganlu.github.io/writing/writing-2.html">02. 2019.01.09 《名字》</a></li>
+			<li><a href="../forganlu.github.io/writing/writing-3.html">03. 2019.05.24 《旅馆》</a></li>
+			<li><a href="../forganlu.github.io/writing/writing-4.html">04. 2019.10.22 《马鹿之死》</a></li>
+			<li><a href="../forganlu.github.io/writing/writing-5.html">05. 2019.11.05 《美丽新世界》</a></li>
+			<li><a href="../forganlu.github.io/writing/writing-6.html">06. 2019.12.04 《记忆空间》</a></li>
+			<li><a href="../forganlu.github.io/writing/writing-7.html">07. 2020.02.14 《温暖的海》</a></li>
+			<li><a href="../forganlu.github.io/writing/writing-8.html">08. 2020.02.17 《燕子啊燕子》</a></li>
+			<li><a href="../forganlu.github.io/writing/writing-9.html">09. 2020.02.20 《末日的前好几天》</a></li>
+			<li><a href="../forganlu.github.io/writing/writing-10.html">10. 2020.05.29 《吃金鱼》</a></li>
+			<li><a href="../forganlu.github.io/writing/writing-11.html">11. 2020.10.17 《1810号房间》</a></li>
+	
 		</ul>
 	</div>	
 	<div class="about">
@@ -95,8 +88,8 @@
 			只用于中文版本。<br />
 			<p></p></span>
 			<span style="background-color:rgb(255, 0, 0)" >
-			Password request please<a href="mailto:ganlu2525@outlook.com"><strong> email me</strong></a>.<br />
-			请求阅读请<a href="mailto:ganlu2525@outlook.com"><strong>联系</strong></a>。</span>
+			Selected writings are password required, please<a href="mailto:ganlu2525@outlook.com"><strong> email</strong></a>.<br />
+			部分文字请求阅读请<a href="mailto:ganlu2525@outlook.com"><strong>联系</strong></a>。</span>
 			
 			<p>&nbsp;</p>
 			<p style="text-align:right">
