--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 	
 	<div class="tophead1">
 		<ul class="tophead">
-			<li><a href="../forganlu.github.io/index-painting.html"><span style="background-color:rgb(255, 0, 0)" >绘画</span></a></li>
-			<li><a href="../forganlu.github.io/index-photography.html"><span style="background-color:rgb(255, 255, 255)" >摄影</span></a></li>
-			<li><a href="../forganlu.github.io/index-writing.html"><span style="background-color:rgb(255, 255, 255)" >文字</span></a></li>
-			<li><a href="../forganlu.github.io/index-about.html"><span style="background-color:rgb(255, 255, 255)" >关于</span></a></li>
-			<li><a href="../forganlu.github.io/index-contact.html"><span style="background-color:rgb(255, 255, 255)" >联络</span></a></li></span>
+			<li><a href="../forganlu.github.io/index-painting.html"><span style="background-color:rgb(255, 255, 255)" >绘画/painting</span></a></li>
+			<li><a href="../forganlu.github.io/index-photography.html"><span style="background-color:rgb(255, 255, 255)" >摄影/photograph</span></a></li>
+			<li><a href="../forganlu.github.io/index-writing.html"><span style="background-color:rgb(255, 255, 255)" >文字/writing</span></a></li>
+			<li><a href="../forganlu.github.io/index-about.html"><span style="background-color:rgb(255, 255, 255)" >关于/about</span></a></li>
+			<li><a href="../forganlu.github.io/index-contact.html"><span style="background-color:rgb(255, 255, 255)" >联络/contact</span></a></li></span>
 		</ul>
 	</div>
 	<!------------------------lefthead--------------------->
