--- a/writing/writing-8.html
+++ b/writing/writing-8.html
@@ -79,20 +79,16 @@ return false;
 	<!-----------------------tophead----------------------->
 	<div class="tophead1">
 		<ul class="tophead">
-			<li><a href="../index-painting.html">绘画</a></li>
-			<li><a href="../index-photography.html">摄影</a></li>
-			<li><a href="../index-writing.html">文字</a></li>
-			<li><a href="../index-about.html">关于</a></li>
-			<li><a href="../index-contact.html">联络</a></li>
+			<li><a href="../index-painting.html"><span style="background-color:rgb(255, 255, 255)" >绘画/painting</span></a></li>
+			<li><a href="../index-photography.html"><span style="background-color:rgb(255, 255, 255)" ></span>摄影/photograph</span></a></li>
+			<li><a href="../index-writing.html"><span style="background-color:rgb(255, 0, 0)" >文字/writing</span></a></li>
+			<li><a href="../index-about.html"><span style="background-color:rgb(255, 255, 255)" >关于/about</span></a></li>
+			<li><a href="../index-contact.html"><span style="background-color:rgb(255, 255, 255)" >联络/contact</span></a></li>
 		</ul>
 	</div>
 	<!------------------------lefthead--------------------->
 	<div  class="lefthead1">
 		<ul class="lefthead">
-			<li><a href="../index-painting.html">painting</a></li>
-			<li><a href="../index-photography.html">photography</a></li>
-			<li><a href="../index-writing.html">writing</a>
-				<ul class="secondmanu" list-style:none;>
 					<li><a href="../writing/writing-1.html">01. 2018.12.30 《马鹿》</a></li>
 					<li><a href="../writing/writing-2.html">02. 2019.01.09 《名字》</a></li>
 					<li><a href="../writing/writing-3.html">03. 2019.05.24 《旅馆》</a></li>
@@ -104,11 +100,7 @@ return false;
 					<li><a href="../writing/writing-9.html">09. 2020.02.20 《末日的前好几天》</a></li>
 					<li><a href="../writing/writing-10.html">10. 2020.05.29 《吃金鱼》</a></li>
 					<li><a href="../writing/writing-11.html">11. 2020.10.17 《1810号房间》</a></li>
-				</ul>
-			</li>
-			<li><a href="../index-about.html">about</a></li>
-			<li><a href="../index-contact.html">contact</a></li>
-		</ul>
+				
 	</div>	
 	<div class="about">
 		<div class="writingfront">
