--- a/index-contact.html
+++ b/index-contact.html
@@ -32,23 +32,15 @@
 	<!-----------------------tophead----------------------->
 	<div class="tophead1">
 		<ul class="tophead">
-			<li><a href="../forganlu.github.io/index-painting.html">绘画</a></li>
-			<li><a href="../forganlu.github.io/index-photography.html">摄影</a></li>
-			<li><a href="../forganlu.github.io/index-writing.html">文字</a></li>
-			<li><a href="../forganlu.github.io/index-about.html">关于</a></li>
-			<li><a href="../forganlu.github.io/index-contact.html">联络</a></li>
+			<li><a href="../forganlu.github.io/index-painting.html"><span style="background-color:rgb(255, 255, 255)" >绘画/painting</span></a></li>
+			<li><a href="../forganlu.github.io/index-photography.html"><span style="background-color:rgb(255, 255, 255)" >摄影/photograph</span></a></li>
+			<li><a href="../forganlu.github.io/index-writing.html"><span style="background-color:rgb(255, 255, 255)" >文字/writing</span></a></li>
+			<li><a href="../forganlu.github.io/index-about.html"><span style="background-color:rgb(255, 255, 255)" >关于/about</span></a></li>
+			<li><a href="../forganlu.github.io/index-contact.html"><span style="background-color:rgb(255, 0, 0)" >联络/contact</span></a></li></span>
 		</ul>
 	</div>
 	<!------------------------lefthead--------------------->
-	<div  class="lefthead1">
-		<ul class="lefthead">
-			<li><a href="../forganlu.github.io/index-painting.html">painting</a></li>
-			<li><a href="../forganlu.github.io/index-photography.html">photography</a></li>
-			<li><a href="../forganlu.github.io/index-writing.html">writing</a></li>
-			<li><a href="../forganlu.github.io/index-about.html">about</a></li>
-			<li><a href="../forganlu.github.io/index-contact.html">contact</a></li>
-		</ul>
-	</div>	
+
 	
 		
 </div>
