--- a/index-about.html
+++ b/index-about.html
@@ -51,18 +51,13 @@
 	<div class="aboutinfo">
 		<p>
 		<span style="background-color:white" >
-			<strong>Gan Lu</strong>
+			<strong>Gan Lu</strong><br />
 			<br />
+			Born 1998, China.<br />
+			Based in Guangzhou / Hong Kong<br />
 			<br />
-			Born 1998, China.
-			<br />
-			Based in Guangzhou / Hong Kong
-			<br />
-			<br />
-			BFA - 5thStudio of Oil Painting Department of Guangzhou Academic of Fine Art
-			<br />
-			MFA - Creative Media of City University of Hong Kong
-			<br />
+			BFA - 5th Studio of Oil Painting Department of Guangzhou Academic of Fine Art<br />
+			MFA - Creative Media of City University of Hong Kong<br />
 			<br />
 			<br />
 			<br />
