--- a/index-contact.html
+++ b/index-contact.html
@@ -45,13 +45,12 @@
 		
 </div>
 <div class="about">
-	<div class="portfoliopic"></div>
 	<div class="aboutinfo">
 		<p>
 		
 			<span style="background-color:white" ><strong>Gan Lu</strong></span><br />
 			<p></p> 
-			Website: <span style="background-color:rgb(255, 255, 255)" ><a href="../forganlu.github.io/index.html"><strong>www.forganlu.com</strong></a></span><br />
+			<!--Website: <span style="background-color:rgb(255, 255, 255)" ><a href="../forganlu.github.io/index.html"><strong>www.forganlu.com</strong></a></span><br />-->
 			Email: <span style="background-color:rgb(255, 255, 255)" ><a href="mailto:ganlu2525@outlook.com"> <strong>ganlu2525@outlook.com</strong></a></span><br />
 			Instagram: <span style="background-color:rgb(255, 255, 255)" ><a href="https://www.instagram.com/forganlu/"><strong>@forganlu</strong></a></span>
 		
