--- a/index-painting.html
+++ b/index-painting.html
@@ -42,14 +42,20 @@
 	<!------------------------lefthead--------------------->
 	<div  class="lefthead1">
 		<ul class="lefthead">
-			
-		</ul>
+			<li>Field trip
+				<li>2018</li>
+			</li>
+
+			<li>ddd ppp</li>
+			<li>Collage</li>		
+		</ul>	
 	</div>	
+
 	<div class="about">
 		<div class="writingfront">
 			<span style="background-color:rgb(60, 255, 0)" >
-			Under released.<br />
-			暂未发布。</span>
+			Incompletely released.<br />
+			不完全发布。</span>
 	</div>
 	</div>
 	
