--- a/index.html
+++ b/index.html
@@ -42,12 +42,9 @@
 	</div>
 	<!------------------------lefthead--------------------->
 	<div  class="lefthead1">
-		<ul class="lefthead">
-			<li><a href="../forganlu.github.io/index-painting.html"><span style="background-color:rgb(255, 0, 0)" >painting</span></a></li>
-			<li><a href="../forganlu.github.io/index-photography.html"><span style="background-color:rgb(255, 255, 255)" >photograph</span></a></li>
-			<li><a href="../forganlu.github.io/index-writing.html"><span style="background-color:rgb(255, 255, 255)" >writing</span></a></li>
-			<li><a href="../forganlu.github.io/index-about.html"><span style="background-color:rgb(255, 255, 255)" >about</span></a></li>
-			<li><a href="../forganlu.github.io/index-contact.html"><span style="background-color:rgb(255, 255, 255)" >contact</span></a></li>
+		<ul class="label">
+			<span style="background-color: whitesmoke;"><strong>My hand and butterfly</strong><br />
+			sketch on paper, 2019</span><br />
 		</ul>
 	</div>	</span>
 	<div class="about"></div>
