--- a/index-painting.html
+++ b/index-painting.html
@@ -42,12 +42,9 @@
 	<!------------------------lefthead--------------------->
 	<div  class="lefthead1">
 		<ul class="lefthead">
-			<li>Field trip
-				<li>2018</li>
-			</li>
-
-			<li>ddd ppp</li>
-			<li>Collage</li>		
+			<li><a href="../forganlu.github.io/painting/painting-1.html" >Field trip </a></li>
+			<li><a href="../forganlu.github.io/painting/painting-2.html" >ddd ppp</a></li>
+			<li><a href="../forganlu.github.io/painting/painting-3.html">Collage</a></li>		
 		</ul>	
 	</div>	
 
