--- a/painting/painting-3.html
+++ b/painting/painting-3.html
@@ -43,7 +43,7 @@
 	<!------------------------lefthead--------------------->
 	<div  class="lefthead1">
 		<ul class="lefthead">
-			<li><a href="../painting/painting-1.html"><span style="background-color:rgb(255, 0, 0)" >Field trip</span></a>
+			<li><a href="../painting/painting-1.html">Field trip</a>
 				<ul class="secondmanu" list-style:none;>
 					<li>2018</li>
 					<li>2019</li>
