--- a/index-about.html
+++ b/index-about.html
@@ -47,8 +47,7 @@
 		
 </div>
 <div class="about">
-	<div class="portfoliopic1"></div>
-	<div class="aboutinfo">
+	<div class="writingfront">
 		<p>
 		<span style="background-color:white" >
 			<strong>Gan Lu</strong><br />
