--- a/index-contact.html
+++ b/index-contact.html
@@ -45,7 +45,7 @@
 		
 </div>
 <div class="about">
-	<div class="aboutinfo">
+	<div class="writingfront">
 		<p>
 		
 			<span style="background-color:white" ><strong>Gan Lu</strong></span><br />
