--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="../forganlu.github.io/css/mysite.css">
 <title>Ganlu</title>
 <link rel="icon" type="image/x-icon" href="../forganlu.github.io/ICON.png" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 	
 <body>
