--- a/painting/Sketch.html
+++ b/painting/Sketch.html
@@ -34,7 +34,7 @@
 	<div class="tophead1">
 		<ul class="tophead">
 			<li><a href="../index-painting.html"><span style="background-color:rgb(255, 0, 0)" >绘画/painting</span></a></li>
-			<li><a href="../index-photography.html"><span style="background-color:rgb(255, 255, 255)" ></span>摄影/photograph</span></a></li>
+			<li><a href="../index-photography.html"><span style="background-color:rgb(255, 255, 255)" >摄影/photograph</span></a></li>
 			<li><a href="../index-writing.html"><span style="background-color:rgb(255, 255, 255)" >文字/writing</span></a></li>
 			<li><a href="../index-about.html"><span style="background-color:rgb(255, 255, 255)" >关于/about</span></a></li>
 			<li><a href="../index-contact.html"><span style="background-color:rgb(255, 255, 255)" >联络/contact</span></a></li>
@@ -51,6 +51,7 @@
 			<li><a href="../painting/Collage.html">Collage</a></li>
 			<li><a href="../painting/Backup.html">Back Up</a></li>
 			<li><a href="../painting/TheDeathofBajkal.html">The Death of Bajkal</a></li>
+			<li><a href="../painting/EatingGoldfish.html">Eating Goldfish</a></li>
 			<li><a href="../painting/Treasures.html">Treasures</a></li>		
 		</ul>
 			
