--- a/painting/EatingGoldfish.html
+++ b/painting/EatingGoldfish.html
@@ -69,19 +69,19 @@
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
-			<img src="../image/painting/Eating Goldfish/Eating Goldfish-1.JPG" alt="">
+			<img src="../image/painting/Eating Goldfish/Eating Goldfish-1.JPG" alt=""width="660px">
 			<p style="text-align:right">
 				Exhibition<br />
 				展览现场<br />
 				</p>
 			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/Eating Goldfish/Eating Goldfish-2.JPG" alt="">
+			<img src="../image/painting/Eating Goldfish/Eating Goldfish-2.JPG" alt=""width="660px">
 			<p style="text-align:right">
 			Eating Goldfish-1/2020/Acrylic on wood/280×220cm<br />
 			吃金鱼-1/2020/木板丙烯/280×220cm<br />
 			</p>
 			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/Eating Goldfish/Eating Goldfish-3.JPG" alt="">
+			<img src="../image/painting/Eating Goldfish/Eating Goldfish-3.JPG" alt=""width="660px">
 			<p style="text-align:right">
 				Eating Goldfish-2/2020/Sketch on wood/280×220cm<br />
 				吃金鱼-2/2020/木板素描/280×220cm<br />
