--- a/index-photography.html
+++ b/index-photography.html
@@ -42,14 +42,21 @@
 	<!------------------------lefthead--------------------->
 	<div  class="lefthead1">
 		<ul class="lefthead">
-	
+			<li><a href="../forganlu.github.io/photography/oldman.html">Old Man</a></li>
+			<li><a href="../forganlu.github.io/photography/liquid.html">Liquid</a></li>
+			<li><a href="../forganlu.github.io/photography/ontheroad.html">On the Road</a></li>
+			<li><a href="../forganlu.github.io/photography/building.html">Building</a></li>
+			<li><a href="../forganlu.github.io/photography/hardtosay.html">Hard to say</a></li>
+			<li><a href="../forganlu.github.io/photography/polaroidinhk.html">Polaroid in HK</a></li>
+			<li><a href="../forganlu.github.io/photography/groupphoto.html">Group Photo</a></li>
+			<li><a href="../forganlu.github.io/photography/2021bdp.html">2021BDP</a></li>
 		</ul>
 	</div>	
 	<div class="about">
 		<div class="writingfront">
 			<span style="background-color:rgb(60, 255, 0)" >
-			Under released.<br />
-			暂未发布。</span>
+				Incompletely released.<br />
+				不完全发布。</span>
 	</div>
 
 	</div>
