--- a/painting/EatingGoldfish.html
+++ b/painting/EatingGoldfish.html
@@ -62,9 +62,9 @@
 			Ganlu is a girl who can draw and write very well. When she was studying in the Fifth Studio of Guangzhou Academy of Fine Arts, she always liked to draw collage-based graffiti on large drawing books: with her unbridled smears and line drawings cheerfully dancing in between all kinds magazine papers, wrapping paper, photos, color cardboards and later digital prints, she conveyed what she was on paper. She called this kind of painting “simple-stroke painting”. Afterwards, she fell in love with story-writing. She created various characters, treated the stories as inspirations and backgrounds for her painting, and even directly juxtaposed words and images together, which hones her capability of understanding and applying these two languages. In order to achieve a certain pleasure of writing, Ganlu was acting like an alchemist dived into a laboratory. She mixed all kinds of seemingly incompatible things together, and added her own spells. Then chemical reactions were rolling out, overwhelming and dancing more ecstatically and cheerfully.<br />
 			<p style="text-align:right">By Qin Jin</p><br />
 			<br />
-			<p>评论：</p><br />
-			甘露是个很能画也很能写的女孩，她在广州美术学院第五工作室学习期间，一直喜欢在大画本上画拼贴涂鸦作品：各种来自于杂志，包装纸、照片、彩色卡纸的纸片，后来还有数码照片，加上她大笔的涂抹和线描，都变得欢快跃动，一如她的性格。她把这种画叫简笔画。后来，她又喜欢上写故事，创造各种人物，把故事当作创作图画的线索来源和背景去看待，甚至于把文字和图像直接放在一起，这锻炼了她对这两种语言的理解和使用的能力。为了达至某种书写的快感，甘露就像一个埋首实验室里的炼金术士，把各种看似不能放在一起的东西统统混合，再加上自己的咒语，化学反应滚滚而来，令人无暇应接，更加忘我地欢快跃动。<br />
-			<p style="text-align:right">秦晋/文</p><br />
+			<!--<p>评论：</p><br />
+			甘露是个很能画也很能写的女孩，她在广州美术学院第五工作室学习期间，一直喜欢在大画本上画拼贴涂鸦作品：各种来自于杂志，包装纸、照片、彩色卡纸的纸片，后来还有数码照片，加上她大笔的涂抹和线描，都变得欢快跃动，一如她的性格。她把这种画叫简笔画。后来，她又喜欢上写故事，创造各种人物，把故事当作创作图画的线索来源和背景去看待，甚至于把文字和图像直接放在一起，这锻炼了她对这两种语言的理解和使用的能力。为了达至某种书写的快感，甘露就像一个埋首实验室里的炼金术士，把各种看似不能放在一起的东西统统混合，再加上自己的咒语，化学反应滚滚而来，令人无暇应接，更加忘我地欢快跃动。<br /> 
+			<p style="text-align:right">秦晋/文</p><br /> -->
 			
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
