--- a/photography/groupphoto.html
+++ b/photography/groupphoto.html
@@ -6,7 +6,6 @@
 <title>Ganlu</title>
 <link rel="icon" type="image/x-icon" href="../ICON.png" />
 <!---------密码需要------------>
-
 <script type="text/javascript">   
 	function password() {   
 	var testV = 1;   
@@ -80,18 +79,59 @@
 	<div class="about">
 		<div class="container">
 			<span style="background-color:rgb(255, 255, 255)" >
-			<br />
-			<br /></span>
+			Those are some group photos with friends.<br />
+			此处是一些和大家的合照。<br /></span>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
-			<img src="../image/photograph/group photo/000003.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/group photo/000004.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/group photo/000006.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/group photo/000041.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/group photo/000042.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/group photo/000052.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/group photo/BD8B4531.jpg" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/photograph/group photo/000003.JPG" alt="" width="660px">
+			<p style="text-align:right">
+				2019 Graduation Exhibition in Guangdong Museum of Art / Ray, Luo Wenshan, Me<br />
+				2019 毕业展览/于广东美术馆。沈晓彤，罗文山，我<br />
+				</p>
+			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/photograph/group photo/000004.JPG" alt="" width="660px">
+			<p style="text-align:right">
+				2019 Graduation Exhibition in Guangdong Museum of Art / Me, Du Jinkun, Ray<br />
+				2019 毕业展览/于广东美术馆。我，杜京昆，沈晓彤<br />
+				</p>
+			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/photograph/group photo/000006.JPG" alt="" width="660px">
+			<p style="text-align:right">
+				2019 Graduation Exhibition in Guangdong Museum of Art<br />
+				2019 毕业展览/于广东美术馆<br />
+				</p>
+			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/photograph/group photo/000041.JPG" alt="" width="660px">
+			<p style="text-align:right">
+				Zhou Li and Me<br />
+				周力老师和我<br />
+				</p>
+			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/photograph/group photo/000042.JPG" alt="" width="660px">
+			<p style="text-align:right">
+				I forgot when is it<br />
+				忘记是什么时候了<br />
+				</p>
+			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/photograph/group photo/000052.JPG" alt="" width="660px">
+			<p style="text-align:right">
+				2019 Hand-made books project<br />
+				2019年手工书课程<br />
+				</p>
+			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/photograph/group photo/IMG_7357.JPG" alt="" width="660px">
+			<p style="text-align:right">
+				2020 Painting for the wind<br />
+				2020 给风的画<br />
+				</p>
+			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/photograph/group photo/BD8B4531.jpg" alt="" width="660px">
+			<p style="text-align:right">
+				2021 Please mind the Gap<br />
+				2021 注意间隙<br />
+				</p>
+			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
 			
 			
 			
