--- a/index-photography.html
+++ b/index-photography.html
@@ -44,6 +44,7 @@
 		<ul class="lefthead">
 			<li><a href="../forganlu.github.io/photography/oldman.html">Old Man</a></li>
 			<li><a href="../forganlu.github.io/photography/liquid.html">Liquid</a></li>
+			<li><a href="../forganlu.github.io/photography/ritzsdream.html">Ritz's Dream</a></li>
 			<li><a href="../forganlu.github.io/photography/ontheroad.html">On the Road</a></li>
 			<li><a href="../forganlu.github.io/photography/building.html">Building</a></li>
 			<li><a href="../forganlu.github.io/photography/hardtosay.html">Hard to say</a></li>
