--- a/photography/ontheroad.html
+++ b/photography/ontheroad.html
@@ -45,6 +45,7 @@
 		<ul class="lefthead">
 			<li><a href="../photography/oldman.html">Old Man</a></li>
 			<li><a href="../photography/liquid.html">Liquid</a></li>
+			<li><a href="../photography/ritzsdream.html">Ritz's Dream</a></li>
 			<li><a href="../photography/ontheroad.html"><strong>On the Road</strong></a></li>
 			<li><a href="../photography/building.html">Building</a></li>
 			<li><a href="../photography/hardtosay.html">Hard to say</a></li>
