--- a/photography/ritzsdream.html
+++ b/photography/ritzsdream.html
@@ -43,9 +43,9 @@
 	<!------------------------lefthead--------------------->
 	<div  class="lefthead1">
 		<ul class="lefthead">
-			<li><a href="../photography/oldman.html"><strong>Old Man</strong></a></li>
+			<li><a href="../photography/oldman.html">Old Man</a></li>
 			<li><a href="../photography/liquid.html">Liquid</a></li>
-			<li><a href="../photography/ritzsdream.html">Ritz's Dream</a></li>
+			<li><a href="../photography/ritzsdream.html"><strong>Ritz's Dream</strong></a></li>
 			<li><a href="../photography/ontheroad.html">On the Road</a></li>
 			<li><a href="../photography/building.html">Building</a></li>
 			<li><a href="../photography/hardtosay.html">Hard to say</a></li>
@@ -59,19 +59,20 @@
 	<div class="about">
 		<div class="container">
 			<span style="background-color:rgb(255, 255, 255)" >
-			This is where I started.<br />
-			这里是我的初始地。<br /></span>
+			<br />
+			<br /></span>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
-			<img src="../image/photograph/old man/old man-1.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/old man/old man-2.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/old man/old man-3.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/old man/old man-4.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/old man/old man-5.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/old man/old man-6.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/old man/old man-7.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/old man/old man-8.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/photograph/Ritz's Dream/ritzsdream-1.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/photograph/Ritz's Dream/ritzsdream-2.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/photograph/Ritz's Dream/ritzsdream-3.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/photograph/Ritz's Dream/ritzsdream-4.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/photograph/Ritz's Dream/ritzsdream-5.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/photograph/Ritz's Dream/ritzsdream-6.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<iframe width="660px" height="100%" src="https://vimeo.com/304739598" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+			
+			
 			
 		</div>
 			
