--- a/photography/ritzsdream.html
+++ b/photography/ritzsdream.html
@@ -59,8 +59,10 @@
 	<div class="about">
 		<div class="container">
 			<span style="background-color:rgb(255, 255, 255)" >
+			Ritz made a dream, and I love it, therefore it became my story. The dreamer is talking to herself, and nobody can tell whether it's she in the mirror, whether it's a dream or reality, dramatic. But the moment music stopped, the dream stopped, I participated in the dreamer's dream and now I would like to show it to you.<br />
 			<br />
-			<br /></span>
+			5'35'' Length<br />
+			</span>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
@@ -70,7 +72,19 @@
 			<img src="../image/photograph/Ritz's Dream/ritzsdream-4.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
 			<img src="../image/photograph/Ritz's Dream/ritzsdream-5.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
 			<img src="../image/photograph/Ritz's Dream/ritzsdream-6.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<iframe width="660px" height="100%" src="https://vimeo.com/304739598" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+			<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/304739598?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Ritz&amp;#039;s Dream"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+			<br />
+			<strong>Lines:</strong>
+			Just leave? What am I waiting for?<br />
+			Objectively speaking, people in the mirror is me,<br />
+			there is no reason woolgather. I am here!<br />
+			I must get out of here.<br />
+			I am in the mirror!<br />
+			I must leave, where is Jean-Claude and Maunel?<br />
+			She is just like me, but she's dead.<br />
+			I'd better calm down.<br />
+
+			<br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
 			
 			
 			
