--- a/photography/ritzsdream.html
+++ b/photography/ritzsdream.html
@@ -74,7 +74,7 @@
 			<img src="../image/photograph/Ritz's Dream/ritzsdream-6.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
 			<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/304739598?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Ritz&amp;#039;s Dream"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 			<br />
-			<strong>Lines:</strong>
+			<strong>Lines:</strong><br />
 			Just leave? What am I waiting for?<br />
 			Objectively speaking, people in the mirror is me,<br />
 			there is no reason woolgather. I am here!<br />
