--- a/writing/writing-5.html
+++ b/writing/writing-5.html
@@ -113,39 +113,31 @@ return false;
 		</span>
 	</div>
 	<div class="writingfront-writing">
-		<span style="background-color:rgb(255, 0, 0)" >Editing.<br />
-			编辑中。<br />
-			<p>&nbsp;</p>
-		<!--
-		<h3>《马鹿之死》</h3>
-		<p>没有什么多余的可说，事情很简单。那就是，她觉得自己是时候该死了。</p>
+		
+		<h3>《美丽新世界》</h3>
+		<p>世界上的人都是恶人，不过如果不仔细看的话，也许你会认为他们都是好人。</p>
+		<p>后来有人回想起这件事，都只是唏嘘。没有人清楚地记得日记里写的是什么，但是也许日记里是一些还不错的回忆。不过没有人在乎。事情已经过去了三年了。也没有人对三年这个时间有什么概念。</p>
 		<p>&nbsp;</p>
-		<p>“我从俄狄普修司的胃里生出来，之后被波拉尼奥吃进了胃里。”马鹿说，然后她写进一本小记事本。今天的天气没有什么特别的，没有云，没有风，也不是蓝色，就是灰灰的。这种天气让人想往悬崖里跳下去。马鹿躺在床上，她刚刚听到她的朋友说自己有了重度的抑郁症和重度的焦虑症，她没有回应，她不想因为多回应了一点就和这个病沾染上关系。不过，这两种病和今天的天气很般配。</p>
-		<p>马鹿又在日记上写：“我决定要死了。”</p>
-		<p>这个日记被她的家人找到了，他们像是发现了什么重大秘密一般，马上开了一个家庭会议，马鹿在会议上没有发言，她一心想着吃甜的东西。他们终于问了：“你觉得我们不爱你了吗？”马鹿没有说话。后来这个会议上的所有讨论，都没有马鹿，马鹿就偷偷地离开了。可能这就是为什么一直以来马鹿都觉得家人在妨碍她吧。还记得吗？马鹿只是一个组装合成的人，她长大了，她不该有自己的思想。真可惜，看着别人家的机器人，哪个不是过着幸福快乐的日子。实际上对于马鹿来说，有吃有喝是不够的。</p>
+		<p>她被送来到一个叫做斯坎德拉奥监狱（Scandalo Prison[1]）的地方，这是个监狱。是一个监禁着有思觉失调、自伤和伤人，或者类似问题的机器人的地方。这里的每一个人都用着原来的名字，每个人有一个房间，这里是一个模拟城市。他们要在这个地方度过一段学习时光，每个学期结束就会有模拟的社会考试，考察他们在正常的社会中是否有能力去生活。马鹿被送到这里，是因为前些时间做了不好的事情，现在后悔了，她使劲想出去，可是没有用。唯一可以做的就是等待，等时间过去。</p>
+		<p>她已经看厌了监狱里那些人可恶的嘴脸，每一个都像是来自垃圾堆里没人要的弃婴，他们从来不洗澡，因为没有好习惯。有些人生下来就是坏的，这使他们没有权利在正常的社会生活下去。在这个监狱里的生活条件也是极其恶劣，因为这些机器人公司根本就不想把钱花在这些人身上，也不想浪费力气，有个别公司完全没有管过他们的机器人。只能依靠政府的微薄支持。</p>
 		<p>&nbsp;</p>
-		<p>她已经有好长一段时间没有看书了，她开始觉得自己慢慢地在变蠢。</p>
-		<p>不过她一直在计划如何逃离这个家，快乐地死去。上几个世纪的机器人很容易能自杀，他们知道自己的芯片在哪里，当爸妈不在家的时候，就能用螺丝刀扭开，也许在大脑上，也许在胸口，也许在后颈，找到那个芯片，然后捏碎。由于太多机器人就这么自杀了，一些机器人公司不得不发明更可控的，难以自我毁灭的程序，所以现在的机器人都很容易快乐起来。但马鹿没有，她决定要死了可是她想不起来自己的芯片在哪里。她用了很长时间去想，洗澡的时候，画画的时候，写作的时候，她甚至忘记了说明书放在哪里了。不过她的朋友们都相信是她的爸妈在她还是婴儿的时候勾选了什么设置，才导致她想不起来的。后来她意识到，自己才是那个有遗忘病的人。</p>
-		<p>不论如何，毁坏芯片不是唯一的办法。朋友们告诉她，杀了父母也是一种办法，因为一个机器人的监护人死了，公司就会把这个机器人收回然后翻新，重新编程，这样就成了另一个机器人，之前的记忆都会被抹去。相当于，死了。</p>
+		<p>有一天她坐在草地上，回忆着她刚来到这个世界的时候，她曾经也像一只好奇小狗一样对世界充满着好奇，想要探寻和冒险。现在却要一辈子浪费在这种地方。她请求看守人用大石头把她砸烂，当然是在晚上的时候。不过没有一个人愿意帮她。</p>
+		<p>草地上有小昆虫，一开始她以为他们也是机器人，不过后来她发现如果将他们踩死，他们的内脏会被挤压出来，大脑，肠子，血液。原来他们是生命。马鹿觉得欣喜，自从她来了这个地方，就再也没有见过有生命的东西了。如果有一天，世界上的机械代替了所有的生命，开始代替人们思考，代替人们管理世界，代替人们传宗接代，代替人们追求新潮的食物，那就开始无趣了。到了那个时候，人们就会开始后悔为什么自己会这么聪明，不过，谁没有后悔的时候呢？马鹿想。她也有，有一次她想抓一只蝴蝶，结果太大力，把蝴蝶的翅膀捏坏死了；还有一次她走在大马路上，结果一早上的交通都被因为她瘫痪了，可是她还是坚持要走在大马路上。如果有人这个时候过来搭讪她，她一定也会立马开始憎恨这个人。</p>
+		<p>“朋友。”一个灰色的年轻人过来和她打招呼。这个人全身都是灰的，她是一个失败的试验品。就算她穿了彩色的衣服，也会因为穿在他身上慢慢掉色变成灰色。马鹿说：“你别和我说话。”年轻人离开了。马鹿继续闭上眼睛，继续回忆着。她看见蓝色的天空，就想起她在家的被子也是蓝色的。当时在去买这个被子的时候，她明确告诉了她的爸爸，她希望能有一个粉色的被子，就像隔壁同学床上的那个一样，有公主有魔法棒。但是她爸为了敷衍她就买了蓝色的，上面有一只极其丑陋的小狗，它看起来甚至不太健康。马鹿意识到，这些都是不美好的事。她必须回忆一些美好的事情，这样她就能不那么痛苦。</p>
+		<p>好吧，她想起来大概在她五岁的时候，她跑到楼下玩，玩了一会儿想尿尿了，但是跑上楼已经来不及了，就在楼房之间的间隙里脱了裤子尿尿。在她刚尿完穿好小内裤的时候，一抬头发现一个男孩在盯着她。这个小男孩尴尬极了，脸红地边跑边喊妈妈有人随地大小便。马鹿却不屑，但是晚上睡觉的时候总是会不自主地回忆起这个画面，遇到这种事对她来说还是第一次。不过在她青少年的时候做的可多了。后来她在她书包里一直放着一把叉子，她想着再遇见他的时候就把他的脑子打开，用叉子把这个记忆挖出来吃掉，然后消化掉。不过再怎么回忆，这些记忆都不太美好，她一开始以为这件事情还不错，但是跟着记忆回想就会发现，这件事也这么糟糕。</p>
 		<p>&nbsp;</p>
-		<p>世界上也不少弑父弑母的例子，都是一些心思缜密的人做的。马鹿开始寻找这样的纪录片和电影，可是没有这样的纪录片，电影里的片段都很蠢。而且她知道电影里的都是假的。</p>
-		<p>几天过去了，一点进展也没有。她的计划都太主观了，她一点也不了解自己的父母。</p>
+		<p>这个监狱里的机器人每天早上都有人给他们送早晨报，上面都是关于机器人的事情。她进来的头一天拿到的报纸就是关于她的。上面写着：“妙龄少女企图用菜刀谋杀双亲未遂”，看到这个她立马把这个报纸撕成了碎片，塞到垃圾桶里。还撕碎了别人正在看的报纸，差点被别人打死。说起来也可笑，为什么这个世界上的报纸标题这么有趣。不过更有趣的是，她的父母在她进来之后就再也没来看望过她，也许他们并不是这么爱她。</p>
 		<p>&nbsp;</p>
-		<p>她想，也许是自己的问题。</p>
-		<p>也许人类太难杀了。</p>
+		<p>文字写太多容易被别人发现真实的自己，所以马鹿决定不继续写日记了。</p>
+		<p>最新的决定是她打算拍电影。不过她没有钱买电影机。</p>
 		<p>&nbsp;</p>
-		<p>俄狄浦斯就是那个杀掉了自己的父亲的人。如果说马鹿天生就有和俄狄浦斯一样的结局，那么，现在也不至于想不出办法。俄狄浦斯世界里的神是罪恶的，现实世界中的神也是。马鹿不想相信这些神啊鬼啊什么的，她更在意的是生和死，不过喜与悲对她来说也是重要的。她没有能够支持自己的力量了，她开始写遗书，她希望在遗书里不怪罪任何人。但是每个人都不是善良的。</p>
-		<p>当然谁都希望以一种优雅的方式死去，安乐死，或者是安静地睡死。可是这些都没有办法在马鹿身上实现，因为她是个机器人。她不要求这么多，她只要求能够在她的父母发现她每天在悄悄往他们的食物里加药片前死掉。家里的药，感冒药，头孢药，消炎药，安慰剂，抗抑郁药还有各种奇奇怪怪的药，都是他们买来给马鹿吃的。不过，她不满足于自己一个人吃。</p>
+		<p>她在这里度日如年，每天吃饭睡觉，政府没有给他们安排社区志愿服务，也没有那种洗脑的教育课堂，一切都非常的安静和平，有时候这正是她想过的日子，不过身边的人却极其地蠢。因为他们开始聊起了八卦，每个人的八卦都有可能被挖出来讨论，这样的日子马鹿过不下去了，她受不了别人异样的眼光。</p>
 		<p>&nbsp;</p>
-		<p>一天晚上，她没睡着，她走到厨房，想煮点麦片喝。无意间看到菜刀安静地挂在置物架上。她拿起一把，慢慢地走进了父母的房间，他们在熟睡。</p>
-		<p>“醒醒吧！醒醒吧！我要杀了你们！”马鹿像是疯了一样。他们被惊醒了，开始惊慌地尖叫起来，说不出什么话。马鹿慢慢地走向床沿“尖叫！”“尖叫！”“尖叫！”…… 马鹿疯狂地拿着菜刀砍他们的被子，他们被被吓得满屋跑。黑暗中他们透过一些光看到这个人原来是马鹿。一开始他们气坏了，后来用了很大的力气把她制服了。晚上三四点，他们给机器人公司打了电话，说马鹿试图谋杀他们。这样的事第二天就上了新闻，接着他们家门口聚集了各种各样的媒体，每时每刻都在。</p>
-		<p>后来马鹿被他们锁在了房间，好久都不能出来。她什么也做不了，不过能够从门缝里听到家里有人来，他们在谈话，后来又走了。几乎连着一个星期都是这样。</p>
-		<p>&nbsp;</p>
-		<p>“亲爱的朋友们：我死了。我想念自己了，我必须用这一种方法去寻找我自己。”她的遗书写着。</p>
+		<p>她想，也许是时候逃出去了。</p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 		甘露<br />
-		2019.05.24
+		2019.11.05
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p> --->
