--- a/writing/writing-7.html
+++ b/writing/writing-7.html
@@ -113,39 +113,29 @@ return false;
 		</span>
 	</div>
 	<div class="writingfront-writing">
-		<span style="background-color:rgb(255, 0, 0)" >Editing.<br />
-			编辑中。<br />
-			<p>&nbsp;</p>
-		<!--
-		<h3>《马鹿之死》</h3>
-		<p>没有什么多余的可说，事情很简单。那就是，她觉得自己是时候该死了。</p>
+		
+		
+		<h3>《温暖的海》</h3>
+		<p>马鹿拿着笔，又写了一封信给她的爸妈。内容是：亲爱的父母，你们好吗？我很好，请放心，我非常想念你们，希望能够早日和你们相见。爱你们的，马鹿。</p>
+		<p>现在她能够意识到生命的重要了。后来没过多久，她就被释放了。她自由了。</p>
 		<p>&nbsp;</p>
-		<p>“我从俄狄普修司的胃里生出来，之后被波拉尼奥吃进了胃里。”马鹿说，然后她写进一本小记事本。今天的天气没有什么特别的，没有云，没有风，也不是蓝色，就是灰灰的。这种天气让人想往悬崖里跳下去。马鹿躺在床上，她刚刚听到她的朋友说自己有了重度的抑郁症和重度的焦虑症，她没有回应，她不想因为多回应了一点就和这个病沾染上关系。不过，这两种病和今天的天气很般配。</p>
-		<p>马鹿又在日记上写：“我决定要死了。”</p>
-		<p>这个日记被她的家人找到了，他们像是发现了什么重大秘密一般，马上开了一个家庭会议，马鹿在会议上没有发言，她一心想着吃甜的东西。他们终于问了：“你觉得我们不爱你了吗？”马鹿没有说话。后来这个会议上的所有讨论，都没有马鹿，马鹿就偷偷地离开了。可能这就是为什么一直以来马鹿都觉得家人在妨碍她吧。还记得吗？马鹿只是一个组装合成的人，她长大了，她不该有自己的思想。真可惜，看着别人家的机器人，哪个不是过着幸福快乐的日子。实际上对于马鹿来说，有吃有喝是不够的。</p>
+		<p>“你怀念过去那种以为这辈子都不会灵感枯竭的日子吗？每天好像有说不完的话，心里有成千上万个想法，但是现在好像都没有了，它们都蒸发了一样。”马鹿和监狱里的文员说。他正在忙着给她办理出狱的事情，他总是特别健忘，好像忘了所有的事情一样，他把一个鞋盒和一些纸质文件一并给了马鹿。他想起来这个鞋盒是装着的是马鹿本来要寄给父母的信件。他看了一眼马鹿，有一点内疚，但是他异常的自信很快让他恢复过来。马鹿说这是什么，监狱长说这是私人物件，记得带走。所有的人办事效率都很高，她很快被释放了，她站在监狱门口，不知道该去哪，路上都是不认识的人，她想要是这件事能早点告诉她，她就能给她的父母写信，说不定他们能来接她回家。她打开了鞋盒，她愣了一会，一开始她以为是父母写的回信，她拨了拨鞋盒下面的纸，发现这全是她写给父母的信。她的脸开始发红，身体开始发胀，有一股力量正在往上蹿，到了她的脑子里，她意识到他们没有帮她寄过任何一封信！她开始大力喘气，身上的氧气已经不够她用了，她的脸愈来愈红，她的胃里就像是有一万只虫在爬，身上的每一根汗毛都立了起来，“啊啊啊！”她忍不住叫了出来。两手将鞋盒砸向监狱门口的保安，保安吓了一跳，她受不了了，这个监狱里的人全都是废物，全都是疯子！她用手将保安的领子抓住拉到自己的面前，保安的脸贴到了马鹿的脸上，马鹿尖叫着，嘴巴张得像是要吃了他一样，然后开始啃咬保安的脸。保安脸上肮脏的胡子，汗渍和油，她顾不上这么多。保安用尽最大的力气将她推开。另外一个大鼻子保安赶到，用上了膛的枪指着她，“手举起来！”然后往地上打了一枪。</p>
+		<p>她被带到审讯室。房间里有一面大的镜子，镜子后面是警察。她的脸上有血，非常多，但是她不在意。在被审讯的过程中她只重复一句话：“狗屎。”就这样僵持了一个下午，后来他们终于给她的父母打了电话，让他们来。马鹿被关回拘留屋，等待。</p>
 		<p>&nbsp;</p>
-		<p>她已经有好长一段时间没有看书了，她开始觉得自己慢慢地在变蠢。</p>
-		<p>不过她一直在计划如何逃离这个家，快乐地死去。上几个世纪的机器人很容易能自杀，他们知道自己的芯片在哪里，当爸妈不在家的时候，就能用螺丝刀扭开，也许在大脑上，也许在胸口，也许在后颈，找到那个芯片，然后捏碎。由于太多机器人就这么自杀了，一些机器人公司不得不发明更可控的，难以自我毁灭的程序，所以现在的机器人都很容易快乐起来。但马鹿没有，她决定要死了可是她想不起来自己的芯片在哪里。她用了很长时间去想，洗澡的时候，画画的时候，写作的时候，她甚至忘记了说明书放在哪里了。不过她的朋友们都相信是她的爸妈在她还是婴儿的时候勾选了什么设置，才导致她想不起来的。后来她意识到，自己才是那个有遗忘病的人。</p>
-		<p>不论如何，毁坏芯片不是唯一的办法。朋友们告诉她，杀了父母也是一种办法，因为一个机器人的监护人死了，公司就会把这个机器人收回然后翻新，重新编程，这样就成了另一个机器人，之前的记忆都会被抹去。相当于，死了。</p>
+		<p>等了足足一个星期，他们终于出现了，马鹿隔着门看见了他们，她想控制着自己，但是还是哭了，哽咽的说自己非常想他们，同时也发现他们老了好多。</p>
+		<p>事情就这么结束了，马鹿回到自己的舒适区。她的房间还是没有变，所有的家具都在原来的位置，一切看起来死气沉沉。她和父母的对话变少，她开始经常一个人经常坐在窗前看着外面的景象，她发现自己特别擅长安静。她可以安静地过一整天。这没什么，这是天赋。她注意到书柜上还有很多书自己是没有读过的，她注意到《穆斯林的葬礼》，她想起来这是她很久以前最爱的一个故事，她为没有导演能把它拍出来而感到遗憾。她回忆起在她还没有学别的语言之前也曾经能够流畅地运用第一语言写诗，因为他不够聪明，两种语言让她感到焦虑。但是她已经忘记了曾经自己是怎么思考的，她只记得，当她读完一本书或者看完一本电影的时候，就是思考的开始。她开始嘲笑自己，觉得自己非常可笑。于是房间里时常发出笑声。</p>
+		<p>她拿着鞋盒坐在窗前，那个鞋盒变得更脏了，还有鞋印在上面。里面的内容到现在还没有被看过，她在想还有没有必要把这个给父母，父母也许会很高兴和感动，但她还是决定将她放到衣柜最里面，像秘密一样被安静地隔离了。她坐到窗前，对着窗外大喊：“谁家的狗啊吵死了！”。然后你以为，她的生活是美好的，但是后来被许多人嘲笑着，后来被自己嘲笑着。从前面对死亡这两个字的时候是一脸的不屑，现在真正到了这个时候却害怕地不行，害怕也会被人嘲笑。记得《穆斯林的葬礼》吗？新月躺在病床上的时候，他的心碎和绝望充斥着整个房间，记得当时读到他们呐喊着“新月！”的时候，每个人都是一脸憔悴，你好像也正在经历着这一切一样。现在她却望着窗外。</p>
+		<p>后来父母问她大晚上对着外面喊什么，她说没事。</p>
 		<p>&nbsp;</p>
-		<p>世界上也不少弑父弑母的例子，都是一些心思缜密的人做的。马鹿开始寻找这样的纪录片和电影，可是没有这样的纪录片，电影里的片段都很蠢。而且她知道电影里的都是假的。</p>
-		<p>几天过去了，一点进展也没有。她的计划都太主观了，她一点也不了解自己的父母。</p>
+		<p>后来入秋了。她坐在窗前，腿上盖着一块羊毛毯，手里捧着热红茶。然后你以为她堕落了，开始对周遭的事不闻不问，也对自己没有任何人生规划。好像自己想要的东西全部都在另外一座山顶上，而你如果要过去的话就要从这座山下来，然后从山脚开始爬。她开始幻想之前爱过的女孩子，现在可能和别人在一起快乐生活吧。也许去另外一个城市遇到不同的人之后会想明白吧。但她现在就坐在窗前。</p>
 		<p>&nbsp;</p>
-		<p>她想，也许是自己的问题。</p>
-		<p>也许人类太难杀了。</p>
-		<p>&nbsp;</p>
-		<p>俄狄浦斯就是那个杀掉了自己的父亲的人。如果说马鹿天生就有和俄狄浦斯一样的结局，那么，现在也不至于想不出办法。俄狄浦斯世界里的神是罪恶的，现实世界中的神也是。马鹿不想相信这些神啊鬼啊什么的，她更在意的是生和死，不过喜与悲对她来说也是重要的。她没有能够支持自己的力量了，她开始写遗书，她希望在遗书里不怪罪任何人。但是每个人都不是善良的。</p>
-		<p>当然谁都希望以一种优雅的方式死去，安乐死，或者是安静地睡死。可是这些都没有办法在马鹿身上实现，因为她是个机器人。她不要求这么多，她只要求能够在她的父母发现她每天在悄悄往他们的食物里加药片前死掉。家里的药，感冒药，头孢药，消炎药，安慰剂，抗抑郁药还有各种奇奇怪怪的药，都是他们买来给马鹿吃的。不过，她不满足于自己一个人吃。</p>
-		<p>&nbsp;</p>
-		<p>一天晚上，她没睡着，她走到厨房，想煮点麦片喝。无意间看到菜刀安静地挂在置物架上。她拿起一把，慢慢地走进了父母的房间，他们在熟睡。</p>
-		<p>“醒醒吧！醒醒吧！我要杀了你们！”马鹿像是疯了一样。他们被惊醒了，开始惊慌地尖叫起来，说不出什么话。马鹿慢慢地走向床沿“尖叫！”“尖叫！”“尖叫！”…… 马鹿疯狂地拿着菜刀砍他们的被子，他们被被吓得满屋跑。黑暗中他们透过一些光看到这个人原来是马鹿。一开始他们气坏了，后来用了很大的力气把她制服了。晚上三四点，他们给机器人公司打了电话，说马鹿试图谋杀他们。这样的事第二天就上了新闻，接着他们家门口聚集了各种各样的媒体，每时每刻都在。</p>
-		<p>后来马鹿被他们锁在了房间，好久都不能出来。她什么也做不了，不过能够从门缝里听到家里有人来，他们在谈话，后来又走了。几乎连着一个星期都是这样。</p>
-		<p>&nbsp;</p>
-		<p>“亲爱的朋友们：我死了。我想念自己了，我必须用这一种方法去寻找我自己。”她的遗书写着。</p>
+		<p>后来父母劝她尝试考大学，她说不上来是好还是不好。</p>
+		<p>后来她打算去另一个城市旅游。她和父母道别了之后就出发了，上了轮船，船上有很多上了年纪的爷爷奶奶，他们都不喜欢洗澡，身上有一股臭味。不过还好海风很足，能够把气味吹走。他们擅长和别人交流，他们也擅长和别人打牌，擅长打发时间，擅长忽略。她坐在过道上的凳子上，凳子很小，只够半个屁股。她想，这有什么意义呢？就算出去旅游了一圈又有什么意义呢？也许这样对世界更了解一些？但了解了世界又有什么意义呢？了解了世界大概算是填补知识空缺吧，但是填补了又怎么样呢？就能够更高级吗？或者就比别人更能聊天吗？或许是吧：“天空中参杂着从西伯利亚飘来的风，像发丝一样，像流苏，像妈妈；我希望从此能以人的身份活着；<strong>鲜活的，生动的，湿润的</strong>；可触摸的，可被感受的，亦可被发现的；一种期许，如鲜血般明亮；被爱着，得到爱。”</p>
+		<p>她将这些信全部带到了船上，带到自助餐厅，分发给每位在餐桌上的人，有人问这是什么，她没有回答。分发完了之后她微笑着说：“现在可以阅读了。”大家以为她是其中一个工作人员，纷纷打开信封，开始阅读。有人觉得很奇怪，有人觉得很温暖，有人觉得很生气。有许多质疑和怀疑的眼神望向她，也有许多细碎的讨论，她慢慢地穿过人群，沿着围栏走到甲板上，跳进了海里，温暖的海里。</p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 		甘露<br />
-		2019.05.24
+		2020.02.14
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p> --->
