--- a/writing/writing-3.html
+++ b/writing/writing-3.html
@@ -113,42 +113,42 @@ return false;
 		</span>
 	</div>
 	<div class="writingfront-writing">
-		<span style="background-color:rgb(255, 0, 0)" >Editing.<br />
-			编辑中。<br />
-			<p>&nbsp;</p>
-		<!--
-		<h3>《马鹿之死》</h3>
-		<p>没有什么多余的可说，事情很简单。那就是，她觉得自己是时候该死了。</p>
+		
+		<h3>《旅馆》</h3>
+		<p>马鹿转了个身，从床上掉下来了。可是她不想翻身。</p>
+		<p>女士，这边12点就要退房了，现在已经过了半个小时了。外面的打扫阿姨边敲门边说。因为她等着打扫。</p>
 		<p>&nbsp;</p>
-		<p>“我从俄狄普修司的胃里生出来，之后被波拉尼奥吃进了胃里。”马鹿说，然后她写进一本小记事本。今天的天气没有什么特别的，没有云，没有风，也不是蓝色，就是灰灰的。这种天气让人想往悬崖里跳下去。马鹿躺在床上，她刚刚听到她的朋友说自己有了重度的抑郁症和重度的焦虑症，她没有回应，她不想因为多回应了一点就和这个病沾染上关系。不过，这两种病和今天的天气很般配。</p>
-		<p>马鹿又在日记上写：“我决定要死了。”</p>
-		<p>这个日记被她的家人找到了，他们像是发现了什么重大秘密一般，马上开了一个家庭会议，马鹿在会议上没有发言，她一心想着吃甜的东西。他们终于问了：“你觉得我们不爱你了吗？”马鹿没有说话。后来这个会议上的所有讨论，都没有马鹿，马鹿就偷偷地离开了。可能这就是为什么一直以来马鹿都觉得家人在妨碍她吧。还记得吗？马鹿只是一个组装合成的人，她长大了，她不该有自己的思想。真可惜，看着别人家的机器人，哪个不是过着幸福快乐的日子。实际上对于马鹿来说，有吃有喝是不够的。</p>
+		<p>马鹿还躺在地上。她的手往前伸，摸到了什么，不过这不是她想要的。她的手换了个方向继续探索，他的眼睛紧闭着，是因为昨晚哭的太凶，眼睛肿得难受，不如闭着。这只手什么收获也没有，只好换另一只手摸摸看。刚伸出去就摸到自己的内衣，她把内衣拖到自己胸下，废了一些力气抬了抬身子，勉勉强强把内衣穿上去了，可是没有扣上。马鹿有时候会写诗，听起来很文艺，可是由于她只有高中毕业，本来想跟着舅舅学医药，可是学了几个月就放弃了。所以写的诗很奇怪，连韵都不会押，如果押了，那也是碰巧的。这个时候她正想着要怎么新写一首诗。她听说小津安二郎创作剧本的时候是在外面的房间里面完成的，她想学他，租了一间旅馆，想要用这种方式帮忙自己写一些诗；后来听说柯汉喜欢在列车上写作，可是中国的列车和美国的不一样，她试过一次，不过列车上老人喜欢打牌和大声说话；后来又不知道从哪里看见罗斯特喜欢泡在浴缸里写作，她也尝试了，不过最终那些手稿全部都被不小心浸湿，有些甚至破了。这些方法实际上并没有她想象地那么美好。</p>
+		<p>外面的打扫阿姨又催了，这次就只剩下她这个房间要打扫了。阿姨在外面敲了几次门，马鹿都没有理她，还是躺在地上一动不动。只好找了旅馆的老板，老板穿着衬衫和西裤，扣子都整整齐齐地被扣好，皮带也很安静地被系在腰间，穿着一双旧皮鞋，可是保养得很好，就算很旧但还是很有光泽。老板叹了口气，什么也没有说。他拿着房卡上楼，楼梯的墙上挂满了各种各样老板和年轻女孩子的合照，有早到上个世纪的照片，但所有照片都是同一家照相馆拍和洗的，似乎这个旅店老板在收集什么似的。他走到了马鹿的房间门口，一开门便发现里面的女孩子像尸体一样躺在地上，习以为常地上前去扶她起来，问她还好吗或者需不需要帮忙和叫救护车，就好像是面对什么正常不过的事情一样。</p>
+		<p>马鹿一边说不要叫救护车一边起身扣内衣，穿上睡衣然后躺回床上。她的脸被压了一些痕在上面，像刚睡醒的样子。</p>
+		<p>老板端了一杯茶和一颗综合维生素给她。“茶？这个是维生素，吃了会比较好。”他解释道。</p>
+		<p>马鹿咬住那颗维生素然后喝了一口茶，看了看老板，对他说“你看起来像我老爸。我老爸也喜欢在无聊的时候叫我出房间喝茶，或者拿进来让我喝。不过我老爸还没那么老。”老板坐在床边上，对她说，“你在我的房间里做了什么事，看起来像是生病了？”马鹿回答：“也不是我非要这个样子，而是当我觉得很饿的时候，我就会变得没有力气去做事情，接着我的身体就不会受到控制，在掌控之外。”马鹿又喝了一口茶，继续说。“我在我5岁的时候就发现了我对诗歌有特别的情感，我说的不是中国古诗，而是当代诗歌。我对古诗一窍不通。再怎么解释这些古诗我都没办法记住。不是我蠢，我觉得，反而是这些诗太难了，令人没有欲望去学习它，然后再创造。不过说实话。我的当代诗写得也不怎么样，我会说这句话是因为有一次我和我最好的朋友说我写了很多诗，让她帮我看，可是她才看了几眼就说我写的是狗屎，从此我们就再也不是朋友了。”老板说，“朋友有时候又不是朋友。”马鹿拿起她的笔记本，写下“朋友有时候又不是朋友。”想了想，又划掉了。</p>
 		<p>&nbsp;</p>
-		<p>她已经有好长一段时间没有看书了，她开始觉得自己慢慢地在变蠢。</p>
-		<p>不过她一直在计划如何逃离这个家，快乐地死去。上几个世纪的机器人很容易能自杀，他们知道自己的芯片在哪里，当爸妈不在家的时候，就能用螺丝刀扭开，也许在大脑上，也许在胸口，也许在后颈，找到那个芯片，然后捏碎。由于太多机器人就这么自杀了，一些机器人公司不得不发明更可控的，难以自我毁灭的程序，所以现在的机器人都很容易快乐起来。但马鹿没有，她决定要死了可是她想不起来自己的芯片在哪里。她用了很长时间去想，洗澡的时候，画画的时候，写作的时候，她甚至忘记了说明书放在哪里了。不过她的朋友们都相信是她的爸妈在她还是婴儿的时候勾选了什么设置，才导致她想不起来的。后来她意识到，自己才是那个有遗忘病的人。</p>
-		<p>不论如何，毁坏芯片不是唯一的办法。朋友们告诉她，杀了父母也是一种办法，因为一个机器人的监护人死了，公司就会把这个机器人收回然后翻新，重新编程，这样就成了另一个机器人，之前的记忆都会被抹去。相当于，死了。</p>
+		<p>“我小的时候我爸妈逼我读《红楼梦》，说实话我读不懂，我只能读翻译版本的。里面有很多诗，我相信你也应该知道一些吧？”马鹿说。</p>
+		<p>“我知道一些。”</p>
+		<p>“这里面可不止情情爱爱。”</p>
+		<p>“是不止，还有迷宫和时间。”老板又说“你看起来像是要生病了。” 马鹿的脸上没有什么血色，嘴唇也很苍白，头发乱糟糟。她说，“可以带我去楼下走走吗？”老板说，“好啊。”</p>
 		<p>&nbsp;</p>
-		<p>世界上也不少弑父弑母的例子，都是一些心思缜密的人做的。马鹿开始寻找这样的纪录片和电影，可是没有这样的纪录片，电影里的片段都很蠢。而且她知道电影里的都是假的。</p>
-		<p>几天过去了，一点进展也没有。她的计划都太主观了，她一点也不了解自己的父母。</p>
+		<p>老板给打扫阿姨招呼了一声，让她打扫房间。然后自己拿起桌子上的手表，慢吞吞地带上，跟着马鹿一起下楼了。马鹿还是和以前一样，不论是和谁出去都带着这个黄黄的、有很多星星的笔记本，虽然在路上很少会打开来记一些东西，但是总会有空的时候。</p>
+		<p>他们在街上走，经过一间口腔医院，里面的人似乎都不太开心；还经过一间理发店，就算看不见理发店这三个字，但是看见旋转的圆筒灯箱就明白是理发店了。听说是理发师代替了医生帮病人放血，后来还得到了国王的批准，从此理发师就挂牌自己是外科医师标志，红色代表动脉，蓝色代表静脉，白色代表包扎用的纱布。有时候肮脏的工作也能让另一群人吃饱饭。后来走到一件照相馆，是一间有些年代的照相馆，我的意思是它看起来很旧。两个人在门口相互看了一眼就进去了，摄影师上前招呼。他们注意到墙上都挂着一些这间照相馆珍藏的照片，还有一些顾客的肖像，大部分都是黑白的，墙壁有点微微受潮和发黄，看起来像是很久没有装修过，有些上了挂钩的地方甚至有点脱落。马鹿的手到处摸，摸了墙、桌子、凳沿、顾客的肖像、最后和摄影师握手了。她回头看看旅店老板询问他是否愿意一起拍照，老板点点头，意思是同意。</p>
+		<p>摄影师说：“你们整理一下，然后坐在这边。”他指了指摄影棚里面的座椅，刚好有两个。</p>
+		<p>马鹿四周看，突然想问，“你觉得摄影像什么？”老板说，“唔，时间吧。”马鹿说，“我们通常将抽象的事物比喻成具象的，这样能够让人更好理解一些。我觉得摄影像是琥珀一般的东西，一些虫子被封印在一滴树脂里，我们也很快就会被封印在一张相纸里，这将是会一张珍贵的相纸，世界上只有一张，世界上也没有两个一模一样的琥珀吧，我想。”老板说，“我们得相信一个事实，那就是我们正在宇宙的中心，时间是由我们自己来控制的，然后我们决定将这0.01秒放进这张相纸里，那么，世界也会停止一刻来帮助我们做这件事。”马鹿说，“这么说的话，岂不是所有人都在为我们服务？”老板看着她，然后点点头。马鹿说，“我觉得根本不存在这样的事。”</p>
+		<p>马鹿突然明白，摄影其实没什么特别的，就是工业发展的结果，人类的玩具。</p>
 		<p>&nbsp;</p>
-		<p>她想，也许是自己的问题。</p>
-		<p>也许人类太难杀了。</p>
+		1，2，3，“咔嚓”摄影师说，再来一张,<br />
+		1，2，3，“咔嚓”摄影师说，再来一张,<br />
+		1，2，3，“咔嚓”摄影师说，再来一张,<br />
+		......<br />
+		<p>不知道一共拍了多少张，摄影师说，5天后来取。马鹿把取货票对折放进了本子里，给了老板就离开了，之后这个本子就再也没有被用到了。也没有写诗，也没有记录。</p>
 		<p>&nbsp;</p>
-		<p>俄狄浦斯就是那个杀掉了自己的父亲的人。如果说马鹿天生就有和俄狄浦斯一样的结局，那么，现在也不至于想不出办法。俄狄浦斯世界里的神是罪恶的，现实世界中的神也是。马鹿不想相信这些神啊鬼啊什么的，她更在意的是生和死，不过喜与悲对她来说也是重要的。她没有能够支持自己的力量了，她开始写遗书，她希望在遗书里不怪罪任何人。但是每个人都不是善良的。</p>
-		<p>当然谁都希望以一种优雅的方式死去，安乐死，或者是安静地睡死。可是这些都没有办法在马鹿身上实现，因为她是个机器人。她不要求这么多，她只要求能够在她的父母发现她每天在悄悄往他们的食物里加药片前死掉。家里的药，感冒药，头孢药，消炎药，安慰剂，抗抑郁药还有各种奇奇怪怪的药，都是他们买来给马鹿吃的。不过，她不满足于自己一个人吃。</p>
-		<p>&nbsp;</p>
-		<p>一天晚上，她没睡着，她走到厨房，想煮点麦片喝。无意间看到菜刀安静地挂在置物架上。她拿起一把，慢慢地走进了父母的房间，他们在熟睡。</p>
-		<p>“醒醒吧！醒醒吧！我要杀了你们！”马鹿像是疯了一样。他们被惊醒了，开始惊慌地尖叫起来，说不出什么话。马鹿慢慢地走向床沿“尖叫！”“尖叫！”“尖叫！”…… 马鹿疯狂地拿着菜刀砍他们的被子，他们被被吓得满屋跑。黑暗中他们透过一些光看到这个人原来是马鹿。一开始他们气坏了，后来用了很大的力气把她制服了。晚上三四点，他们给机器人公司打了电话，说马鹿试图谋杀他们。这样的事第二天就上了新闻，接着他们家门口聚集了各种各样的媒体，每时每刻都在。</p>
-		<p>后来马鹿被他们锁在了房间，好久都不能出来。她什么也做不了，不过能够从门缝里听到家里有人来，他们在谈话，后来又走了。几乎连着一个星期都是这样。</p>
-		<p>&nbsp;</p>
-		<p>“亲爱的朋友们：我死了。我想念自己了，我必须用这一种方法去寻找我自己。”她的遗书写着。</p>
+		<p>也不知道过了多少天，老板带着那张票去到那家照相馆，照相馆的人已经帮他装好框，依然是木制的简单相框，没有太多雕花。老板带着这张合照回到旅馆，什么也没有做，在墙上找了一个空位，安排好钉子，把这张照片挂了上去，把这个笔记簿放在了抽屉里。傍晚的时候，旅店老板独自一人回到旅店，刚好遇到一个前来办理入住的女孩子，头发长得如瀑布，说是想住在最高的地方。</p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 		甘露<br />
 		2019.05.24
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
-		<p>&nbsp;</p> --->
+		<p>&nbsp;</p> 
 
 	</div>
 	</div>
