--- a/writing/writing-6.html
+++ b/writing/writing-6.html
@@ -113,42 +113,45 @@ return false;
 		</span>
 	</div>
 	<div class="writingfront-writing">
-		<span style="background-color:rgb(255, 0, 0)" >Editing.<br />
-			编辑中。<br />
-			<p>&nbsp;</p>
-		<!--
-		<h3>《马鹿之死》</h3>
-		<p>没有什么多余的可说，事情很简单。那就是，她觉得自己是时候该死了。</p>
+		
+		<h3>《记忆空间》</h3>
+		<p>然后值得一提的事是：爱情。</p>
+		<p>这件事情很容易就被人类看穿：腐烂的，带有腥臭的，适合或不适合性交的等等。我很难想象一个机器人是怎么谈恋爱的，他们通常被设计出来被弥补人类内心的空虚，而不是自己去学会这么做。某些人愿意将某些情感寄托在物体中。就像他们没有亲人一样，内心是空的。没有了寄托物就没有了活下去的希望。坚强地活着，不需要任何的情感寄托，机器人能做到这一点。但有一天，马鹿喜欢上了那个<strong>没有颜色</strong>的女孩。</p>
 		<p>&nbsp;</p>
-		<p>“我从俄狄普修司的胃里生出来，之后被波拉尼奥吃进了胃里。”马鹿说，然后她写进一本小记事本。今天的天气没有什么特别的，没有云，没有风，也不是蓝色，就是灰灰的。这种天气让人想往悬崖里跳下去。马鹿躺在床上，她刚刚听到她的朋友说自己有了重度的抑郁症和重度的焦虑症，她没有回应，她不想因为多回应了一点就和这个病沾染上关系。不过，这两种病和今天的天气很般配。</p>
-		<p>马鹿又在日记上写：“我决定要死了。”</p>
-		<p>这个日记被她的家人找到了，他们像是发现了什么重大秘密一般，马上开了一个家庭会议，马鹿在会议上没有发言，她一心想着吃甜的东西。他们终于问了：“你觉得我们不爱你了吗？”马鹿没有说话。后来这个会议上的所有讨论，都没有马鹿，马鹿就偷偷地离开了。可能这就是为什么一直以来马鹿都觉得家人在妨碍她吧。还记得吗？马鹿只是一个组装合成的人，她长大了，她不该有自己的思想。真可惜，看着别人家的机器人，哪个不是过着幸福快乐的日子。实际上对于马鹿来说，有吃有喝是不够的。</p>
+		<p>不过那个女孩后来被接走了，马鹿再也见不到她了。</p>
 		<p>&nbsp;</p>
-		<p>她已经有好长一段时间没有看书了，她开始觉得自己慢慢地在变蠢。</p>
-		<p>不过她一直在计划如何逃离这个家，快乐地死去。上几个世纪的机器人很容易能自杀，他们知道自己的芯片在哪里，当爸妈不在家的时候，就能用螺丝刀扭开，也许在大脑上，也许在胸口，也许在后颈，找到那个芯片，然后捏碎。由于太多机器人就这么自杀了，一些机器人公司不得不发明更可控的，难以自我毁灭的程序，所以现在的机器人都很容易快乐起来。但马鹿没有，她决定要死了可是她想不起来自己的芯片在哪里。她用了很长时间去想，洗澡的时候，画画的时候，写作的时候，她甚至忘记了说明书放在哪里了。不过她的朋友们都相信是她的爸妈在她还是婴儿的时候勾选了什么设置，才导致她想不起来的。后来她意识到，自己才是那个有遗忘病的人。</p>
-		<p>不论如何，毁坏芯片不是唯一的办法。朋友们告诉她，杀了父母也是一种办法，因为一个机器人的监护人死了，公司就会把这个机器人收回然后翻新，重新编程，这样就成了另一个机器人，之前的记忆都会被抹去。相当于，死了。</p>
+		<p>马鹿经常写信，给在中国的父母，给他们道歉，自己不应该拿着菜刀在他们的房间发疯。她现在完全明白了，想要活下去就得先假装。但是一直没有得到回信，她希望有一天能够得到回信。可事情看起来没这么理想。</p>
+		<p>她对女孩说，她喜欢她，她想和她分享一些从来没有告诉过别人的事情。她的记忆卡不只有一张，而是好几张，有一张是拿来存储一些深藏的，不想被挖出来的，秘密的记忆。由于记忆太多了，不得不换另外一张记忆卡，所以选择将这些事告诉别人，通过占用别人的记忆空间来储存自己的记忆。女孩表现得很乐意，她开始倾听。幸运的是，从来没有人给这个女孩讲过故事，所以她变得喜欢听这些记忆，因为它们就和故事一样好听，尽管有一些细节非常得肮脏与龌蹉。</p>
+		<p>她们开始变得形影不离，女孩会写歌，会编曲，会唱歌，会很多事情，可她就是灰色的。马鹿什么也不会。也不懂怎么和别人交流。可就是喜欢这个女孩。她们聊天的时候喜欢为对方拨挡在眼睛前的头发，也有不开心的时候。有一次马鹿问女孩：“你想看我的裸体吗？”女孩说好。后来的故事有点难为情，但是一段美好的时光。女孩的身上纹着很多数字，她自己的生日，她父母的生日，她的电话号码，邮箱，还有很多门牌号。后来有一段时间马鹿脾气变得暴躁，开始在自己的房间里砸东西，她认为没有人认真得去看她写的东西，她认为周围的人都不友善，她开始怀疑很多事情。她一天给自己的父母写上十封信，不到半个月就用完了她所有的邮票。她在信中写道：她遇到一个女孩，她认为这个女孩是个好女孩，因为她愿意听。</p>
 		<p>&nbsp;</p>
-		<p>世界上也不少弑父弑母的例子，都是一些心思缜密的人做的。马鹿开始寻找这样的纪录片和电影，可是没有这样的纪录片，电影里的片段都很蠢。而且她知道电影里的都是假的。</p>
-		<p>几天过去了，一点进展也没有。她的计划都太主观了，她一点也不了解自己的父母。</p>
+		<p>她和女孩说，她的父母没有给她回过信。女孩说，那你就寄给我吧，我给你回信。<br />
+			别人很难想象世界上还有愿意施舍关爱的女孩。</p>
 		<p>&nbsp;</p>
-		<p>她想，也许是自己的问题。</p>
-		<p>也许人类太难杀了。</p>
+		<p>在监狱里检查信件的那个人偷偷记住了马鹿的信，认为马鹿又开始有自伤和伤人的倾向。然后他留着所有马鹿的信，没有帮她寄出去，留了一整个鞋盒这么多。在新年前给了他们的监狱长，监狱长给了心理评估师。最后他们的出的结论是：他们怀疑马鹿没有按时吃药。而且在伤害别的机器人。并且把这个告诉了女孩，让女孩注意安全，特别是在晚上睡觉的时候，因为马鹿曾经会拿着菜刀到房间里砍人。新年的时候，女孩女孩决定同意自己安乐死，监狱的人很快就将她处死了，并且告诉马鹿说她是被接走的。</p>
+		<p>马鹿疯了。</p>
+		<p>她花了几个月建起来的另一个记忆空间，没有了，带着以前的记忆也一起消失了。马鹿从来没想过会变成这样。很快，她无法接受这样的事实，她的脑子开始快速衰老。她只希望这些信能够被收好。她引以为豪想谈的事情消失了。女孩消失了。她在想，也许学女孩一样，把记忆力存在皮肤上会好一点。不过女孩只写了数字，她要把日记都纹在身上。</p>
 		<p>&nbsp;</p>
-		<p>俄狄浦斯就是那个杀掉了自己的父亲的人。如果说马鹿天生就有和俄狄浦斯一样的结局，那么，现在也不至于想不出办法。俄狄浦斯世界里的神是罪恶的，现实世界中的神也是。马鹿不想相信这些神啊鬼啊什么的，她更在意的是生和死，不过喜与悲对她来说也是重要的。她没有能够支持自己的力量了，她开始写遗书，她希望在遗书里不怪罪任何人。但是每个人都不是善良的。</p>
-		<p>当然谁都希望以一种优雅的方式死去，安乐死，或者是安静地睡死。可是这些都没有办法在马鹿身上实现，因为她是个机器人。她不要求这么多，她只要求能够在她的父母发现她每天在悄悄往他们的食物里加药片前死掉。家里的药，感冒药，头孢药，消炎药，安慰剂，抗抑郁药还有各种奇奇怪怪的药，都是他们买来给马鹿吃的。不过，她不满足于自己一个人吃。</p>
+		「数ヵ月前、女の子と知り合いになった」<br />
+		「私は両親に手紙を書きます。決して返事をしません。」<br />
+		「この嬢は出て行った。迎えられた」<br />
+		「彼女がどこに行ったか知らない。それが記憶力だ」<br />
+		「記憶力を自分の身につけることにした」<br />
 		<p>&nbsp;</p>
-		<p>一天晚上，她没睡着，她走到厨房，想煮点麦片喝。无意间看到菜刀安静地挂在置物架上。她拿起一把，慢慢地走进了父母的房间，他们在熟睡。</p>
-		<p>“醒醒吧！醒醒吧！我要杀了你们！”马鹿像是疯了一样。他们被惊醒了，开始惊慌地尖叫起来，说不出什么话。马鹿慢慢地走向床沿“尖叫！”“尖叫！”“尖叫！”…… 马鹿疯狂地拿着菜刀砍他们的被子，他们被被吓得满屋跑。黑暗中他们透过一些光看到这个人原来是马鹿。一开始他们气坏了，后来用了很大的力气把她制服了。晚上三四点，他们给机器人公司打了电话，说马鹿试图谋杀他们。这样的事第二天就上了新闻，接着他们家门口聚集了各种各样的媒体，每时每刻都在。</p>
-		<p>后来马鹿被他们锁在了房间，好久都不能出来。她什么也做不了，不过能够从门缝里听到家里有人来，他们在谈话，后来又走了。几乎连着一个星期都是这样。</p>
+		<p>她记不起来了。</p>
+		<p>她坐在一旁，喝着蜂蜜，时常幻想着女孩还在的时候的样子。也总是有一个声音在对她说：“你给我写，我给你回信”。这样一来就没办法忘记这个女孩了。就这样过了一个新年，以前只要是新年的时候就是最难过的时候，父母总是带着自己去各种不认识的亲戚的家里，喝着廉价的绿茶，拿着别人送给自己的难吃的点心又送给别人。可悲的父母还以为自己很爱马鹿。一种孤独感就开始慢慢地膨胀，曾经也以为父母是她最爱的人，但是后来发现不是。他们不负责任地就把马鹿带到这个世界上，然后不给予关爱，粗暴地就长大了。马鹿觉得自己很可怜，是一种心理上的，没有被满足的，被孤立的可怜，在女孩走了之后这种感觉更加强烈了。不过不能和身体上的可怜相比。这样无法相比。</p>
+		<p>“马鹿啊，接受吧，被注定成为一个悲伤的人，快乐是别人才能施舍给你的。”她的幻听又出现了。不过她没有注意到。</p>
 		<p>&nbsp;</p>
-		<p>“亲爱的朋友们：我死了。我想念自己了，我必须用这一种方法去寻找我自己。”她的遗书写着。</p>
+		<p>监狱里的人喜欢在她睡觉的时候偷偷看她的日记。后来连一些看管监狱的人也一起看。他们的心情开始随着马鹿的日记变化，有一次马鹿写自己在喝水的时候被呛到了，然后她很想念她的父母，可是父母已经很久没有消息了，要是父母在的话，可能会帮她拍拍背。其他人看完之后喝水都变得小心翼翼，看待马鹿的眼神也变得不坚定，想要偷偷看她，但是又怕被她发现。她想要集中注意力去学一门外语，尽管她已经能将这个外语的语音语调学得很像，但是还是不能很连贯地描述自己的心情。每个月面对医生的时候都还是需要翻译，有翻译在气氛会变得不一样，她想自己一个人和医生对话。医生显得很不在乎，因为和她症状一样的人很多，他只想搪塞过去。给她做一些自己都不知道有没有必要的检查，还是关于流程，最后开一样的药，剂量也一样。这样事情会简单很多。也有时间给自己安排健身，或者去牙科医生那边检查牙齿。不论在哪里都有这么<strong>不真诚</strong>的人存在。</p>
+		<p>&nbsp;</p>
+		<p>马鹿把自己的日记撕了。她吃饭的时候听到旁边的人在谈论。她决定了，她根本不需要什么其他的东西来储存自己的记忆，什么记忆卡，日记本，恋爱女孩，到最后都会消失。她已经在身上纹了很多字，都不起作用，因为她看不到自己的背后写了什么。真是可悲。怎么样都没办法记住。</p>
+		<p>可最后还是有一篇没舍得撕掉。是关于她和女孩的美好记忆，虽然更美好的部分被女孩带走了。</p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 		甘露<br />
 		2019.05.24
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
-		<p>&nbsp;</p> --->
+		<p>&nbsp;</p> 
 
 	</div>
 	</div>
